# ZAMP

zalazek/: Makefile  interp  interpreter  plik_test.cmd
zalazek/config/: config.xml
zalazek/inc/: AbstractComChannel.hh  ComChannel.hh  CommandRegistry.hh  Configuration.hh  Connection.hh  LibInterface.hh  MobileObj.hh  Preprocessor.hh  Scene.hh  Sender.hh  xmlinterp.hh
zalazek/plugin/: Makefile
zalazek/plugin/inc/: Interp4Move.hh  Interp4Pause.hh  Interp4Rotate.hh  Interp4Set.hh
zalazek/plugin/src/: Interp4Move.cpp  Interp4Pause.cpp  Interp4Rotate.cpp  Interp4Set.cpp
zalazek/serwer-z-tlem-Qt6/: CZYTAJ.TO  Makefile  Makefile.exec  serwer_graficzny
zalazek/serwer-z-tlem-Qt6/libQGLViewer/: Makefile
zalazek/serwer-z-tlem-Qt6/libQGLViewer/QGLViewer/: Makefile  libQGLViewer-qt6.prl  libQGLViewer-qt6.so.2.9.1  ui_ImageInterface.h  ui_VRenderInterface.h
zalazek/serwer-z-tlem-Qt6/libQGLViewer/examples/: Makefile
zalazek/serwer-z-tlem-Qt6/serwer_zrodla/: Makefile.app  Makefile.server
zalazek/src/: ComChannel.cpp  CommandRegistry.cpp  Configuration.cpp  Connection.cpp  LibInterface.cpp  MobileObj.cpp  Preprocessor.cpp  Scene.cpp  Sender.cpp  main.cpp  xmlinterp.cpp
zalazek/zad4-pomoc/package-interp4cmds-2libs/: INSTALL  LICENSE  README  configure.ac
zalazek/zad4-pomoc/package-interp4cmds-2libs/inc/: Makefile.am
zalazek/zad4-pomoc/package-interp4cmds-2libs/src/: Makefile.am  main.cpp
zalazek/zad4-pomoc/package-interp4cmds-2libs/src-lib/: Makefile.am  tool1.cpp  tool2.cpp
zalazek/zalazek-xmlinterp4config/src/: main.cpp
(+58 files in other folders)
