lib_LTLIBRARIES = libtool1.la libtool2.la

libtool1_la_SOURCES = tool1.cpp
libtool1_la_CXXFLAGS = -I../inc -I../../../inc -std=c++17
libtool1_la_LDFLAGS = -module -version-info 1:0:0

libtool2_la_SOURCES = tool2.cpp
libtool2_la_CXXFLAGS = -I../inc -I../../../inc -std=c++17
libtool2_la_LDFLAGS = -module -version-info 1:0:0
